# tcnchatbot

./: .env.example  .gitignore  CXP.md  LICENSE  README.md  ROADMAP.md  bot.py  check_webhook.py  database.py  package-lock.json  pyproject.toml  railway.toml  test_post_init.py  test_webhook.py
backend/: .env.example  ai_library.py  bot.py  database.py  pyproject.toml  test_init.py  test_post.py
backend/handlers/: ai_chat.py  channel_admin.py  channel_link.py  common.py  cxp.py  help.py  init_config.py  moderation.py  owner_menu.py  ping.py  time.py  translation.py  verification.py
handlers/: config_conversation.py  cxp.py  init_config.py  service_cleaner.py  verification.py
mini-app/: .env.example  index.html  package-lock.json  package.json
mini-app/src/: App.tsx
